Closed Bug 404447 Opened 18 years ago Closed 18 years ago

after "Restore", items in "Bookmarks Toolbar" appears twice. not replaced.

Categories

(Firefox :: Bookmarks & History, defect, P1)

x86
Windows XP
defect

Tracking

()

VERIFIED FIXED
Firefox 3 beta2

People

(Reporter: bugmozz, Assigned: asaf)

References

Details

(Keywords: regression)

Attachments

(1 file)

Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b2pre) Gecko/2007111920 Minefield/3.0b2pre ID:2007111920 regression from bug 387746
Assignee: nobody → mano
Flags: blocking-firefox3?
Priority: -- → P1
Target Milestone: --- → Firefox 3 M10
Attached patch patchSplinter Review
Attachment #289589 - Flags: review?(dietrich)
Attachment #289589 - Flags: review?(dietrich) → review+
Attachment #289589 - Flags: approval1.9?
Attachment #289589 - Flags: approval1.9? → approval1.9+
mozilla/browser/components/places/src/nsPlacesImportExportService.cpp 1.35
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
confirmed. fixed. thanks.
Flags: blocking-firefox3? → blocking-firefox3+
verified with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9b2pre) Gecko/2007120304 Minefield/3.0b2pre
Status: RESOLVED → VERIFIED
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h". In Thunderbird 3.0b, you do that as follows: Tools | Message Filters Make sure the correct account is selected. Click "New" Conditions: Body contains places-to-b-and-h Change the action to "Delete Message". Select "Manually Run" from the dropdown at the top. Click OK. Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter. Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: