Bug 404447 - after "Restore", items in "Bookmarks Toolbar" appears twice, not replaced. r=dietrich, a=schrep.